Améliorations et corrections diverses : - Ajout de la gestion des événements clavier pour contrôler les vidéos dans la lightbox (lecture/pause, volume, muet). - Maintien des fonctionnalités de navigation via les flèches gauche/droite même lorsque la vidéo est visible. - Mise à jour du README.md avec la nouvelle structure des dossiers et fichiers JS. - Test de navigation pour les publics ayant besoin de fonctionnalites d'accessibilité

--- a/sass/Pages/photographer-page.scss
+++ b/sass/Pages/photographer-page.scss
@@ -1,9 +1,8 @@
 .main {
-
   min-height: 100vh;
 
   // Coût journalier et likes
-  &__cost-likes {
+  &__daily-cost-likes {
     position: fixed;
     bottom: 0;
     right: 35px;
@@ -38,16 +37,16 @@
     }
 
     &-banner {
-      @include grid(1fr, 3fr, 50px);
+      @include grid(1, 3, 50px);
       align-items: center;
       justify-items: center;
 
       @include mobile-only {
-        @include grid(auto, 1fr, 10px);
+        @include grid(auto, 1, 10px);
       }
 
       @include tablet-only {
-        @include grid(auto, 1fr, 10px);
+        @include grid(auto, 1, 10px);
       }
     }
   }
@@ -162,21 +161,34 @@
 .images {
   margin-top: 75px;
 
-  @include grid(1fr, 3fr, 25px);
+  @include grid(1, 3, 25px);
 
   @include mobile-only {
-    @include grid(1fr, 1fr, 15px);
+    @include grid(1, 1, 15px);
   }
 
   @include tablet-only {
-    @include grid(2fr, 2fr, 15px);
+    @include grid(2, 2, 15px);
   }
 
   @include laptop-only {
-    @include grid(2fr, 2fr, 15px);
+    @include grid(2, 2, 15px);
   }
 
-  &__container {
+  &__image {
+    width: 350px;
+    height: 300px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: var(--buttons-border-radius);
+  }
+  
+  &__video {
+    width: 350px;
+    height: 300px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    border-radius: var(--buttons-border-radius);
     @include center-flex-column;
   }
 
@@ -189,6 +201,10 @@
       @include tablet-only {
         max-width: 350px;
       }
+    }
+
+    &-container {
+      @include center-flex-column;
     }
 
     &-text {
@@ -207,21 +223,8 @@
       margin-right: 1px;
     }
 
-    &-image {
-      width: 350px;
-      height: 300px;
-      object-fit: cover;
-      object-position: center;
-      border-radius: var(--buttons-border-radius);
-    }
 
-    &-video {
-      width: 350px;
-      height: 300px;
-      -o-object-fit: cover;
-      object-fit: cover;
-      border-radius: var(--buttons-border-radius);
-      @include center-flex-column;
-    }
+
+
   }
 }
