--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -1,6 +1,8 @@
 //SASS Variables
 $body-bg-color: white;
 
+$tab-shadow-color: rgb(228, 169, 59);
+
 $buttons-color: white;
 $buttons-color--hover: black;
 $buttons-color--focus: black;
